	* HTML escape the field values on the details tab
	* Fix #215, make infinite eta values display in the correct order
	* Fix displaying the protocol upload speed
	* Fix #990, showing 0 as a limit when it means unlimited in the statusbar

==== Console ====
	* Fix displaying non-ascii strings
	* Fix #1052 crash when issuing commands while not connected to a daemon

=== Deluge 1.2.0_rc2 (25 October 2009) ===
==== GtkUI ====
	* Fix path errors when adding torrents externally in Windows
	* Fix localclient authentication by stripping the lines read from the auth file
	* Do not try to call doIteration() on the reactor if it has already stopped
	* Fix 'autostart localhost if needed' option
	* Fix starting plugins when the pluginmanager is started
	* Fix #799 translate connection status
	* Fix #215 ETA sort order

==== Core ====
	* Fix saving torrent state on fresh configs

==== Web ====
	* Fix changing of the allocation in the preferences.
	* Fix updating the Connection Manager when a host is added.
	* Add a `--fork` option to allow forking the webui to the background
	* Fix the statusbar menu limits
	* Fix setting the torrent options via the options tab
	* Fix the private flag in the options tab

==== Console ====
	* Fix exception when using the 'halt' command

==== Misc ====
	* Add man pages for deluge-console, deluge-gtk and deluge-web

==== Extractor ====
	* Fix issue where the plugin would not stop extracting files after being disabled
	* Add option to create torrent name sub-folders in extract folder

=== Deluge 1.2.0_rc1 (07 October 2009) ===
==== Core ====
	* Implement new RPC protocol DelugeRPC replacing XMLRPC
	* Move to a twisted framework
	* Add an 'Error' filter for Trackers to show trackers that currently have a tracker error
	* Use system GeoIP database if available, this is now an optional dependency

==== GtkUI ====
	* Remove SignalReceiver
	* Implemented a cross-platform IPC method thus removing the DBUS dependency